deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-tracker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plane-tracker
  ports:
    - name: http
      port: 80
      targetPort: http
